# envy-zeitgeist-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  BRIEF_GENERATION_GUIDE.md  CHANGELOG.md  CLAUDE.md  DATABASE_REVIEW_REPORT.md  Makefile  README.md  TEST_INFRASTRUCTURE_SUMMARY.md  bandit-results.json  coverage.xml  docker-compose.production.yml  enhanced_celebrity_tracker.py  enhanced_network_press_collector.py  entertainment_news_collector.py  pyproject.toml  reality_show_controversy_detector.py  requirements-migrations.txt  run_pipeline.sh  security_scan.json  setup.py  test_high_engagement.py  test_zeitgeist_pipeline.py  youtube_engagement_collector.py
.github/: dependabot.yml  markdown-link-check.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  database-migrations.yml  deploy.yml  docs.yml  security.yml
agents/: collector_agent.py  zeitgeist_agent.py  zeitgeist_agent_v2.py
collectors/: __init__.py  archive_sweep_collector.py  enhanced_celebrity_tracker.py  enhanced_network_press_collector.py  enhanced_reddit_collector.py  entertainment_news_collector.py  reality_show_controversy_detector.py  serpapi_trending_collector.py  youtube_engagement_collector.py
config/: production_security.yaml  shadow_keywords.yaml
dags/: __init__.py  daily_zeitgeist_dag.py  daily_zeitgeist_dag_production.py  zeitgeist_monitoring_dag.py
dags/monitoring/: __init__.py  zeitgeist_monitoring.py
docker/: Dockerfile.collector  Dockerfile.collector.production  Dockerfile.migrations  Dockerfile.zeitgeist  Dockerfile.zeitgeist.production
docs/: ARCHITECTURE.md  DEVELOPMENT.md  ENVIRONMENT_SETUP.md
envy_toolkit/: base_collector.py  brief_scheduler.py  brief_templates.py  burst_scheduler.py  circuit_breaker.py  clients.py  config.py  duplicate.py  editorial_alerts.py  embedding_cache.py  enhanced_clients.py  enhanced_config.py  enhanced_supabase_client.py  error_handler.py  exceptions.py  health_check.py  heartbeat_monitor.py  http_client.py  llm_story_clustering.py  logging_config.py  metrics.py  producer_brief.py  rate_limiter.py  retry.py  rss_utils.py  schema.py  security_patches.py  shadow_keywords.py  storage_tiers.py  story_clustering.py  subreddit_discovery.py  subreddit_discovery_clean.py  twitter_free.py
envy_toolkit/clients/: __init__.py  llm.py  perplexity.py  reddit.py  serpapi.py  supabase.py
envy_toolkit/supabase/: __init__.py  client.py  connection_pool.py  monitoring.py  operations.py  query_executor.py  transaction_manager.py
examples/: brief_generation_demo.py  error_handling_demo.py
scripts/: build_and_scan_images.sh  demo_cross_platform.py  dynamic_scheduler.py  manage_discovery.py  update_database.py  validate_environment.py  warm_storage_cleanup.py
supabase/: DATABASE_SCHEMA.md  README.md
supabase/migrations/: 001_init.sql  002_trending_topics_optimization.sql  003_materialized_views.sql  004_performance_optimizations.sql  005_fix_materialized_view_indexes.sql  006_production_monitoring.sql  007_warm_storage_tier.sql  008_story_history.sql  009_seven_day_medians.sql  010_security_performance_fixes.sql  run_migrations.py
tests/: __init__.py  conftest.py  utils.py
tests/integration/: __init__.py  test_collector_integration.py  test_end_to_end_workflow.py
tests/unit/: __init__.py
tests/unit/agents/: test_collector_agent.py  test_zeitgeist_agent.py  test_zeitgeist_brief_generation.py
tests/unit/collectors/: __init__.py  test_enhanced_celebrity_tracker.py  test_enhanced_network_press_collector.py  test_entertainment_news_collector.py  test_reality_show_controversy_detector.py  test_youtube_engagement_collector.py
tests/unit/envy_toolkit/: __init__.py  test_brief_scheduler.py  test_brief_templates.py  test_circuit_breaker.py  test_clients.py  test_config.py  test_duplicate.py  test_enhanced_clients.py  test_enhanced_supabase_client.py  test_error_handler.py  test_exceptions.py  test_health_check.py  test_logging_config.py  test_metrics.py  test_rate_limiter.py  test_retry.py  test_rss_utils.py  test_schema.py  test_twitter_free.py
