[project]
name = "envy-zeitgeist-engine"
version = "0.1.0"
description = "Agent-based pipeline for pop-culture trend detection and analysis"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "supabase>=2.0.0",
    "pgvector==0.2.4",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "serpapi>=0.1.5",
    "snscrape @ git+https://github.com/JustAnotherArchivist/snscrape.git@master",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "hdbscan>=0.8.33",
    "scikit-learn>=1.3.0",
    "spacy>=3.7.0",
    "tiktoken>=0.5.0",
    "psycopg2-binary>=2.9.0",
    "loguru>=0.7.0",
    "praw>=7.7.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "statsmodels>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"